--- a/lab6/lab6.srcs/sources_1/bd/mb_block/ui/bd_d3042d03.ui
+++ b/lab6/lab6.srcs/sources_1/bd/mb_block/ui/bd_d3042d03.ui
@@ -1,49 +1,104 @@
 {
    "ActiveEmotionalView":"Default View",
-   "Default View_ScaleFactor":"0.676243",
-   "Default View_TopLeft":"-129,-56",
-   "ExpandedHierarchyInLayout":"",
+   "Default View_ScaleFactor":"0.548499",
+   "Default View_TopLeft":"1732,-321",
+   "ExpandedHierarchyInLayout":"/microblaze_0_axi_periph|/microblaze_0_axi_periph/s00_couplers|/microblaze_0_axi_periph/m02_couplers|/microblaze_0_axi_periph/m03_couplers|/microblaze_0_axi_periph/m04_couplers",
    "guistr":"# # String gsaved with Nlview 7.0r6  2020-01-29 bk=1.5227 VDI=41 GEI=36 GUI=JA:10.0 non-TLS-threadsafe
 #  -string -flagsOSRD
-preplace port gpio_rtl_0 -pg 1 -lvl 5 -x 1570 -y 150 -defaultsOSRD
-preplace port uart_rtl_0 -pg 1 -lvl 5 -x 1570 -y 490 -defaultsOSRD
-preplace port port-id_clk_100MHz -pg 1 -lvl 0 -x 0 -y 340 -defaultsOSRD
-preplace port port-id_reset_rtl_0 -pg 1 -lvl 0 -x 0 -y 90 -defaultsOSRD
-preplace inst microblaze_0 -pg 1 -lvl 1 -x 290 -y 190 -defaultsOSRD
-preplace inst microblaze_0_local_memory -pg 1 -lvl 2 -x 750 -y 130 -defaultsOSRD
-preplace inst microblaze_0_axi_periph -pg 1 -lvl 3 -x 1100 -y 310 -defaultsOSRD
-preplace inst microblaze_0_axi_intc -pg 1 -lvl 4 -x 1420 -y 340 -defaultsOSRD
-preplace inst mdm_1 -pg 1 -lvl 1 -x 290 -y 470 -defaultsOSRD
-preplace inst clk_wiz_1 -pg 1 -lvl 1 -x 290 -y 330 -defaultsOSRD
-preplace inst rst_clk_wiz_1_100M -pg 1 -lvl 2 -x 750 -y 310 -defaultsOSRD
-preplace inst axi_gpio_0 -pg 1 -lvl 4 -x 1420 -y 150 -defaultsOSRD
-preplace inst axi_uartlite_0 -pg 1 -lvl 4 -x 1420 -y 520 -defaultsOSRD
-preplace netloc microblaze_0_Clk 1 0 4 40 80 550 30 950 140 1280
-preplace netloc clk_wiz_1_locked 1 1 1 550 340n
-preplace netloc rst_clk_wiz_1_100M_mb_reset 1 0 4 20 20 NJ 20 930 150 1260
-preplace netloc rst_clk_wiz_1_100M_bus_struct_reset 1 1 2 580 40 920
-preplace netloc mdm_1_debug_sys_rst 1 0 2 50 400 570
-preplace netloc axi_uartlite_0_interrupt 1 3 2 1300 230 1540
+preplace port gpio_rtl_0 -pg 1 -lvl 5 -x 2920 -y 150 -defaultsOSRD
+preplace port uart_rtl_0 -pg 1 -lvl 5 -x 2920 -y 490 -defaultsOSRD
+preplace port gpio_rtl_1 -pg 1 -lvl 5 -x 2920 -y -50 -defaultsOSRD
+preplace port gpio_rtl_2 -pg 1 -lvl 5 -x 2920 -y -240 -defaultsOSRD
+preplace port port-id_clk_100MHz -pg 1 -lvl 0 -x -10 -y 340 -defaultsOSRD
+preplace port port-id_reset_rtl_0 -pg 1 -lvl 0 -x -10 -y 90 -defaultsOSRD
+preplace inst microblaze_0 -pg 1 -lvl 1 -x 510 -y 190 -defaultsOSRD
+preplace inst microblaze_0_local_memory -pg 1 -lvl 2 -x 990 -y 130 -defaultsOSRD
+preplace inst microblaze_0_axi_periph -pg 1 -lvl 3 -x 1440 -y 320 -defaultsOSRD
+preplace inst microblaze_0_axi_intc -pg 1 -lvl 4 -x 2770 -y 340 -defaultsOSRD
+preplace inst mdm_1 -pg 1 -lvl 1 -x 510 -y 470 -defaultsOSRD
+preplace inst clk_wiz_1 -pg 1 -lvl 1 -x 510 -y 330 -defaultsOSRD
+preplace inst rst_clk_wiz_1_100M -pg 1 -lvl 2 -x 990 -y 310 -defaultsOSRD
+preplace inst axi_gpio_0 -pg 1 -lvl 4 -x 2770 -y 150 -defaultsOSRD
+preplace inst axi_uartlite_0 -pg 1 -lvl 4 -x 2770 -y 520 -defaultsOSRD
+preplace inst axi_gpio_1 -pg 1 -lvl 4 -x 2770 -y -50 -defaultsOSRD
+preplace inst axi_gpio_2 -pg 1 -lvl 4 -x 2770 -y -240 -defaultsOSRD
+preplace inst microblaze_0_axi_periph|xbar -pg 1 -lvl 2 -x 1900 -y 560 -defaultsOSRD
+preplace inst microblaze_0_axi_periph|s00_couplers -pg 1 -lvl 1 -x 1560 -y 340 -defaultsOSRD
+preplace inst microblaze_0_axi_periph|m00_couplers -pg 1 -lvl 3 -x 2300 -y 250 -defaultsOSRD
+preplace inst microblaze_0_axi_periph|m01_couplers -pg 1 -lvl 3 -x 2300 -y 420 -defaultsOSRD
+preplace inst microblaze_0_axi_periph|m02_couplers -pg 1 -lvl 3 -x 2300 -y 600 -defaultsOSRD
+preplace inst microblaze_0_axi_periph|m03_couplers -pg 1 -lvl 3 -x 2300 -y 780 -defaultsOSRD
+preplace inst microblaze_0_axi_periph|m04_couplers -pg 1 -lvl 3 -x 2300 -y 968 -defaultsOSRD
+preplace netloc microblaze_0_Clk 1 0 4 30 80 770 30 1190 30 2630
+preplace netloc clk_wiz_1_locked 1 1 1 770 340n
+preplace netloc rst_clk_wiz_1_100M_mb_reset 1 0 4 10 20 NJ 20 1170 108 2600
+preplace netloc rst_clk_wiz_1_100M_bus_struct_reset 1 1 2 800 40 1160
+preplace netloc mdm_1_debug_sys_rst 1 0 2 40 400 790
+preplace netloc axi_uartlite_0_interrupt 1 3 2 2650 230 2890
 preplace netloc clk_100MHz_1 1 0 1 N 340
-preplace netloc reset_rtl_0_1 1 0 2 NJ 90 570J
-preplace netloc rst_clk_wiz_1_100M_peripheral_aresetn 1 2 2 940J 470 1290
-preplace netloc microblaze_0_dlmb_1 1 1 1 540 100n
-preplace netloc microblaze_0_ilmb_1 1 1 1 560 120n
-preplace netloc microblaze_0_axi_dp 1 1 2 NJ 210 NJ
-preplace netloc microblaze_0_interrupt 1 0 5 30 10 NJ 10 NJ 10 NJ 10 1550
-preplace netloc microblaze_0_intc_axi 1 3 1 N 290
-preplace netloc microblaze_0_debug 1 0 2 50 100 530J
-preplace netloc microblaze_0_axi_periph_M01_AXI 1 3 1 1250 310n
+preplace netloc reset_rtl_0_1 1 0 2 NJ 90 790J
+preplace netloc rst_clk_wiz_1_100M_peripheral_aresetn 1 2 2 1200J 118 2640
+preplace netloc microblaze_0_dlmb_1 1 1 1 760 100n
+preplace netloc microblaze_0_ilmb_1 1 1 1 780 120n
+preplace netloc microblaze_0_axi_dp 1 1 2 NJ 210 1180J
+preplace netloc microblaze_0_interrupt 1 0 5 20 10 NJ 10 NJ 10 2650J 30 2900
+preplace netloc microblaze_0_intc_axi 1 3 1 2590 250n
+preplace netloc microblaze_0_debug 1 0 2 40 100 750J
+preplace netloc microblaze_0_axi_periph_M01_AXI 1 3 1 2570 420n
 preplace netloc axi_gpio_0_GPIO 1 4 1 NJ 150
 preplace netloc axi_uartlite_0_UART 1 4 1 NJ 490
-preplace netloc microblaze_0_axi_periph_M02_AXI 1 3 1 1270 130n
-levelinfo -pg 1 0 290 750 1100 1420 1570
-pagesize -pg 1 -db -bbox -sgen -130 0 1690 610
+preplace netloc microblaze_0_axi_periph_M02_AXI 1 3 1 2620 130n
+preplace netloc axi_gpio_1_GPIO 1 4 1 NJ -50
+preplace netloc microblaze_0_axi_periph_M03_AXI 1 3 1 2610 -70n
+preplace netloc axi_gpio_2_GPIO 1 4 1 NJ -240
+preplace netloc microblaze_0_axi_periph_M04_AXI 1 3 1 2580 -260n
+preplace netloc microblaze_0_axi_periph|microblaze_0_axi_periph_ACLK_net 1 0 3 1370 430 1750 430 2080
+preplace netloc microblaze_0_axi_periph|microblaze_0_axi_periph_ARESETN_net 1 0 3 1350 440 1720 440 2050
+preplace netloc microblaze_0_axi_periph|S00_ACLK_1 1 0 1 N 360
+preplace netloc microblaze_0_axi_periph|S00_ARESETN_1 1 0 1 N 380
+preplace netloc microblaze_0_axi_periph|M00_ACLK_1 1 0 3 1360J 230 NJ 230 N
+preplace netloc microblaze_0_axi_periph|M00_ARESETN_1 1 0 3 NJ 450 1710J 250 N
+preplace netloc microblaze_0_axi_periph|M01_ACLK_1 1 0 3 NJ 470 1740J 400 N
+preplace netloc microblaze_0_axi_periph|M01_ARESETN_1 1 0 3 NJ 490 1760J 420 N
+preplace netloc microblaze_0_axi_periph|M02_ACLK_1 1 0 3 NJ 660 NJ 660 2100
+preplace netloc microblaze_0_axi_periph|M02_ARESETN_1 1 0 3 NJ 680 NJ 680 2110
+preplace netloc microblaze_0_axi_periph|M03_ACLK_1 1 0 3 NJ 760 NJ 760 N
+preplace netloc microblaze_0_axi_periph|M03_ARESETN_1 1 0 3 NJ 780 NJ 780 N
+preplace netloc microblaze_0_axi_periph|M04_ACLK_1 1 0 3 NJ 930 NJ 930 2060
+preplace netloc microblaze_0_axi_periph|M04_ARESETN_1 1 0 3 NJ 950 NJ 950 2040
+preplace netloc microblaze_0_axi_periph|microblaze_0_axi_periph_to_s00_couplers 1 0 1 N 300
+preplace netloc microblaze_0_axi_periph|s00_couplers_to_xbar 1 1 1 1730 300n
+preplace netloc microblaze_0_axi_periph|m00_couplers_to_microblaze_0_axi_periph 1 3 1 N 250
+preplace netloc microblaze_0_axi_periph|xbar_to_m00_couplers 1 2 1 2060 210n
+preplace netloc microblaze_0_axi_periph|m01_couplers_to_microblaze_0_axi_periph 1 3 1 N 420
+preplace netloc microblaze_0_axi_periph|xbar_to_m01_couplers 1 2 1 2070 380n
+preplace netloc microblaze_0_axi_periph|m02_couplers_to_microblaze_0_axi_periph 1 3 1 N 560
+preplace netloc microblaze_0_axi_periph|xbar_to_m02_couplers 1 2 1 N 560
+preplace netloc microblaze_0_axi_periph|m03_couplers_to_microblaze_0_axi_periph 1 3 1 2450 740n
+preplace netloc microblaze_0_axi_periph|xbar_to_m03_couplers 1 2 1 2090 580n
+preplace netloc microblaze_0_axi_periph|m04_couplers_to_microblaze_0_axi_periph 1 3 1 2450 928n
+preplace netloc microblaze_0_axi_periph|xbar_to_m04_couplers 1 2 1 2070 600n
+preplace netloc microblaze_0_axi_periph|s00_couplers|s00_couplers_to_s00_couplers 1 0 1 N 300
+preplace netloc microblaze_0_axi_periph|m02_couplers|m02_couplers_to_m02_couplers 1 0 1 N 560
+preplace netloc microblaze_0_axi_periph|m03_couplers|m03_couplers_to_m03_couplers 1 0 1 N 740
+preplace netloc microblaze_0_axi_periph|m04_couplers|m04_couplers_to_m04_couplers 1 0 1 N 928
+levelinfo -pg 1 -10 510 990 1440 2770 2920
+levelinfo -hier microblaze_0_axi_periph * 1560 1900 2300 *
+levelinfo -hier microblaze_0_axi_periph|s00_couplers * *
+levelinfo -hier microblaze_0_axi_periph|m02_couplers * *
+levelinfo -hier microblaze_0_axi_periph|m03_couplers * *
+levelinfo -hier microblaze_0_axi_periph|m04_couplers * *
+pagesize -pg 1 -db -bbox -sgen -140 -320 3040 1130
+pagesize -hier microblaze_0_axi_periph -db -bbox -sgen 1320 150 2480 1060
+pagesize -hier microblaze_0_axi_periph|s00_couplers -db -bbox -sgen 1480 270 1640 410
+pagesize -hier microblaze_0_axi_periph|m02_couplers -db -bbox -sgen 2220 530 2380 670
+pagesize -hier microblaze_0_axi_periph|m03_couplers -db -bbox -sgen 2220 710 2380 850
+pagesize -hier microblaze_0_axi_periph|m04_couplers -db -bbox -sgen 2220 898 2380 1038
 "
 }
 {
-   "da_axi4_cnt":"2",
-   "da_board_cnt":"8",
+   "da_axi4_cnt":"6",
+   "da_board_cnt":"12",
    "da_clkrst_cnt":"1",
    "da_mb_cnt":"1"
 }
